ingress/controllers/haproxy/examples/tests/default-backends.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-https
spec:
  tls:
  - hosts:
    - default.stackpoint.io
    secretName: default.stackpoint.io
  backend:
    serviceName: default-http-backend
    servicePort: 80
---
apiVersion: v1
kind: Secret
metadata:
  name: default.stackpoint.io
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lKQUpMVThvZjFHS25ETUEwR0NTcUdTSWIzRFFFQkN3VUFNRlF4Q3pBSkJnTlYKQkFZVEFsVlRNUkF3RGdZRFZRUUlEQWRUWldGMGRHeGxNUk13RVFZRFZRUUtEQXBUZEdGamEzQnZhVzUwTVI0dwpIQVlEVlFRRERCVmtaV1poZFd4MExuTjBZV05yY0c5cGJuUXVhVzh3SGhjTk1UWXdPVEl6TWpNek9ESTRXaGNOCk1qWXdPVEl4TWpNek9ESTRXakJVTVFzd0NRWURWUVFHRXdKVlV6RVFNQTRHQTFVRUNBd0hVMlZoZEhSc1pURVQKTUJFR0ExVUVDZ3dLVTNSaFkydHdiMmx1ZERFZU1Cd0dBMVVFQXd3VlpHVm1ZWFZzZEM1emRHRmphM0J2YVc1MApMbWx2TUlJQklqQU5CZ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRE9sbWdzK254OHV6eU4Ka1VpYWVldWRUcmk0MkxPNll6RU5ab0RlVGt1SVA2ZnU0NlFab1hkb01hOVBoSWloS0xnbVZ4by9RbDFvL21vUApmQXdNZVZ6d1NTZ083b04wSUxsNCtpT08zRVM4dzR3QUswUlVFc2M5N3cwRFJ6QllOYzVmaVNwalJZbmE3VmdNCld1YjBuZWY2VUt3dERwR3BESm9wTkVSa1RuU0Y4anJEYkFUV2J2aGVzdCtYNDc2QjB4MDBkUTJPTmNxRlQ4TXYKUHNhdlhqZVpyZlNxbEtqb0FsNjlqQUttK0tRZlhoZjlWS09SckpOU25YNVo3VkpPZTNjSVpSR0krS3YyazFRawpoaUxuOGNmQzJOcHVzT [...]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
